--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,10 +14,10 @@ repos:
         args: [--fix]
     -   id: ruff-format
 
--   repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.8.0  # Matches mypy>=1.0.0
-    hooks:
-    -   id: mypy
-        additional_dependencies:
-        - types-requests
-        - pandas-stubs
+# -   repo: https://github.com/pre-commit/mirrors-mypy
+#     rev: v1.8.0  # Matches mypy>=1.0.0
+#     hooks:
+#     -   id: mypy
+#         additional_dependencies:
+#         - types-requests
+#         - pandas-stubs
