--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,1 @@
-SUPABASE_URL=your_supabase_url
-SUPABASE_KEY=your_supabase_key
-SUPABASE_SERVICE_KEY=your_supabase_service_key
+SQLITE_DB_PATH=expense_manager.db
