--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ requires-python = ">=3.12"
 license = { text = "MIT" }
 dependencies = [
     "streamlit>=1.27.0",
-    "supabase>=1.0.3",
+    "sqlite-utils>=3.36",
     "python-dotenv>=1.0.0",
     "pandas>=2.0.0",
     "plotly>=5.14.0",
