--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,8 +11,8 @@ requires-python = ">=3.12"
 license = { text = "MIT" }
 dependencies = [
     "streamlit>=1.27.0",
-    "supabase>=1.0.3",
-    "python-dotenv>=1.0.0",
+    "sqlite-utils>=3.36",
+    "pyyaml>=6.0.0",
     "pandas>=2.0.0",
     "plotly>=5.14.0",
     "pydantic[email]>=2.0.0",
@@ -31,6 +31,9 @@ dev = [
     "pre-commit>=3.0.0",
     "loguru>=0.7.3",
 ]
+
+[tool.setuptools]
+packages = ["expense_manager"]
 
 [tool.ruff]
 target-version = "py312"
